# discord-bot-versions

./: .drone.yml  Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/commands/: mod.rs  release.rs
src/parsers/: go.rs  rust.rs
