[package]
name = "e06_sample_bot_structure"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
# hyper = { version = "0.14", features = ["full"] }
serde = { versoin = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11", features = ["json"] }
# hyper-tls = "0.5.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
# path = "../../"
