[package]
name = "discord-bot-versions"
version = "0.1.0"
authors = ["Michael Held <git@mikeyheld.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
serde = { versoin = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
